--- a/src/app/room/room.page.html
+++ b/src/app/room/room.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="home"></ion-back-button>
     </ion-buttons>
-    <ion-title>Room</ion-title>
+    <ion-title>{{room}}</ion-title>
     <ion-buttons slot="secondary">
       <ion-button (click)="gotoPeoplePage()">
         <ion-icon name="people"></ion-icon>
@@ -12,6 +12,6 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
-  room content
+<ion-content padding scrollX="true">
+  <app-timetable room={{room}}></app-timetable>
 </ion-content>
