--- a/src/app/my-timetable/my-timetable.page.html
+++ b/src/app/my-timetable/my-timetable.page.html
@@ -22,6 +22,8 @@
 
   </div>
 
-  <ion-button padding expand="full" color="success" (click)="save()">Save</ion-button>
+  <ion-button padding expand="full" color="success" disabled="true" (click)="save()">Save</ion-button>
+
+  <div text-center padding>Coming soon</div>
 
 </ion-content>
