--- a/src/app/new-person/new-person.page.html
+++ b/src/app/new-person/new-person.page.html
@@ -10,24 +10,41 @@
 </ion-header>
 
 <ion-content padding>
-  <div padding>
-    <ion-item>
-      <ion-label position="floating">Name</ion-label>
-      <ion-input type="text" [(ngModel)]="newPerson.name"></ion-input>
-    </ion-item>
 
-    <ion-item>
-      <ion-label position="floating">NUSMods Sharable URL</ion-label>
-      <ion-input type="url" [(ngModel)]="newPerson.url"></ion-input>
-    </ion-item>
+  <ion-grid>
+    <ion-row>
+      <ion-col sizeLg="4" sizeMd="6" sizeSm="12" offsetLg="4" offsetMd="3">
+        <ion-item>
+          <ion-label position="stacked">Name</ion-label>
+          <ion-input type="text" [(ngModel)]="newPerson.name"></ion-input>
+        </ion-item>
 
-  </div>
+        <ion-item>
+          <ion-label position="stacked">NUSMods Sharable URL</ion-label>
+          <ion-input type="url" [(ngModel)]="newPerson.url"></ion-input>
+        </ion-item>
+      </ion-col>
+    </ion-row>
 
-  <ion-button padding expand="full" color="success" (click)="addPerson()">Add</ion-button>
+    <div margin text-center style="height: 24px">
+      <div *ngIf="isSpinnerVisible" text-center>
+        <h5>Adding timetable</h5>
+        <ion-spinner></ion-spinner>
+      </div>
+      <ion-text color="danger">
+        {{errorText}}
+      </ion-text>
+    </div>
 
-  <div *ngIf="isSpinnerVisible" text-center>
-    <h5>Adding timetable</h5>
-    <ion-spinner></ion-spinner>
-  </div>
+    <ion-row>
+      <ion-col sizeLg="4" sizeMd="6" sizeSm="12" offsetLg="4" offsetMd="3">
+        <ion-button padding expand="full" color="success" (click)="addPerson()">Add</ion-button>
+
+
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+
 
 </ion-content>
