--- a/src/app/people/people.page.html
+++ b/src/app/people/people.page.html
@@ -12,22 +12,33 @@
 <ion-content padding>
   <ion-grid>
     <ion-row>
-      <ion-col size="6">
+      <ion-col sizeLg="2" sizeMd="3" sizeSm="6" offsetLg="4" offsetMd="3">
         <ion-button expand="full" (click)="gotoNewPersonPage()">Add person</ion-button>
       </ion-col>
-      <ion-col size="6">
-        <ion-button expand="full">Add tile</ion-button>
+      <ion-col sizeLg="2" sizeMd="3" sizeSm="6">
+        <ion-button expand="full" disabled="true">Add tile</ion-button>
       </ion-col>
     </ion-row>
+
+    <ion-row>
+      <ion-col sizeLg="4" sizeMd="6" sizeSm="12" offsetLg="4" offsetMd="3">
+        <div *ngIf="isSpinnerVisible" text-center>
+          <h5>Loading people...</h5>
+          <ion-spinner></ion-spinner>
+        </div>
+        <ion-list>
+          <ion-item *ngFor="let person of people">
+            <ion-label>{{person}}</ion-label>
+          </ion-item>
+        </ion-list>
+
+      </ion-col>
+    </ion-row>
+
+
+
   </ion-grid>
 
-  <ion-list>
-    <ion-item *ngFor="let person of people">
-      <ion-label>{{person}}</ion-label>
-    </ion-item>
-
-    
-  </ion-list>
 
 
 </ion-content>
