--- a/src/app/timetable/timetable.component.scss
+++ b/src/app/timetable/timetable.component.scss
@@ -1,10 +1,34 @@
-table, tr {
-    border: 1px solid black;
-    border-collapse: collapse
-}
+// table, tr {
+//     border: 1px solid gray;
+//     border-collapse: collapse
+// }
 
-th, td {
-    padding: 8px;
+.time {
+    padding: 4px;
     text-align: left;
+    max-width: 108px;
+    min-width: 108px
 }
 
+.buttontext {
+    font-size: 10px;
+}
+
+.days {
+    // border-right: 1px solid gray
+    max-width: 52px;
+    min-width: 52px
+}
+
+.divider {
+    border-bottom: 1px solid gray;
+}
+
+.card{
+    box-shadow: 1px 1px 1px gray;
+    border-radius: 5px;
+    color: white;
+    font-size: 14px;
+    padding-left: 4px;
+    margin: 4px
+}
