--- a/src/app/people/people.page.html
+++ b/src/app/people/people.page.html
@@ -27,9 +27,15 @@
           <ion-spinner></ion-spinner>
         </div>
         <ion-list>
-          <ion-item *ngFor="let person of people">
-            <ion-label>{{person}}</ion-label>
-          </ion-item>
+          <ion-item-sliding *ngFor="let person of people">
+            <ion-item >
+              <ion-label>{{person}}</ion-label>
+            </ion-item>
+            <ion-item-options side="end">
+              <ion-item-option color="danger" (click)="deletePerson(person)">Delete</ion-item-option>
+            </ion-item-options>
+          </ion-item-sliding>
+
         </ion-list>
 
       </ion-col>
