fixed fatal bug

--- a/src/app/room/room.page.html
+++ b/src/app/room/room.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color="primary">
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="home"></ion-back-button>
+      <ion-back-button defaultHref=""></ion-back-button>
     </ion-buttons>
     <ion-title>{{room}}</ion-title>
     <ion-buttons slot="secondary">
@@ -15,6 +15,6 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding scrollX="true">
+<ion-content scrollX="true">
   <app-timetable room={{room}}></app-timetable>
 </ion-content>
