--- a/src/app/timetable/timetable.component.scss
+++ b/src/app/timetable/timetable.component.scss
@@ -1,7 +1,3 @@
-// table, tr {
-//     border: 1px solid gray;
-//     border-collapse: collapse
-// }
 
 .time {
     padding: 4px;
@@ -15,7 +11,6 @@
 }
 
 .days {
-    // border-right: 1px solid gray
     max-width: 52px;
     min-width: 52px
 }
@@ -31,4 +26,8 @@
     font-size: 14px;
     padding-left: 4px;
     margin: 4px
+}
+
+tr:nth-child(even) {
+    background-color: #f2f2f2
 }
